# AkesoAV

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  REQUIREMENTS.md  cmake_test_discovery_4ed2f8fa38.json  cmake_test_discovery_888c088f9e.json  cmake_test_discovery_a31d184035.json  cmake_test_discovery_d12792312c.json  cmake_test_discovery_e3ddcc500c.json  cmake_test_discovery_e450fb974b.json  timeout-f5867add0d620bf462f448ed6c907b8a586db605
bindings/python/: pyakav.py  test_pyakav.py
build-analyze/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AkesoAV.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  akavscan.vcxproj  akavscan.vcxproj.filters  akesoav.vcxproj  akesoav.vcxproj.filters  akesoav_core.vcxproj  akesoav_core.vcxproj.filters  akesoav_tests.vcxproj  akesoav_tests.vcxproj.filters  akesoav_tests[1]_include.cmake
build-fuzz/: .ninja_deps  .ninja_log  build.ninja
cmake/: BuildYara.cmake
config/: import_weights.json  pe_header_weights.json  string_weights.json
docs/: architecture.md  benchmark_report.md  memory-safety.md  specifications.md
include/: akesoav.h
integration/: edr_amsi_av.cpp  edr_amsi_av.h  edr_shim.h
rules/: av_enhanced_detection.yaml  rule_evaluator.cpp  rule_evaluator.h
scripts/: benchmark.py  build_fuzz.ps1  ci.ps1  create_archive_corpus.py  create_eicar_targz.py  create_fuzz_corpus.ps1  create_pe_corpus.ps1  create_test_db.cpp  create_testdata.ps1  install.ps1  test_update_server.py  uninstall.ps1
src/: api.c  dll_main.cpp  engine.cpp  engine_internal.h  engine_shims.cpp  file_type.cpp  file_type.h  scan_cache.cpp  scan_cache.h  scanner.cpp  scanner.h  whitelist.cpp  whitelist.h
src/cli/: akavscan.c
src/database/: sigdb.cpp  sigdb.h
src/emulator/: pe_loader.cpp  pe_loader.h  winapi_stubs.cpp  winapi_stubs.h  x86_decode.cpp  x86_decode.h  x86_emu.cpp  x86_emu.h
src/heuristics/: dynamic_scorer.cpp  dynamic_scorer.h  entropy.cpp  entropy.h  imports.cpp  imports.h  ml_classifier.cpp  ml_classifier.h  static_analyzer.cpp  static_analyzer.h  strings.cpp  strings.h
src/parsers/: elf.cpp  elf.h  gzip.cpp  gzip.h  ole2.cpp  ole2.h  ooxml.cpp  ooxml.h  pdf.cpp  pdf.h  pe.cpp  pe.h  safe_reader.cpp  safe_reader.h  tar.cpp  tar.h  zip.cpp  zip.h
src/plugin/: plugin_loader.cpp  plugin_loader.h
src/protection/: self_protect.cpp  self_protect.h  watchdog.cpp  watchdog.h  watchdog_main.cpp
src/quarantine/: quarantine.cpp  quarantine.h
src/service/: akesoav_service.cpp  cron_parser.cpp  cron_parser.h  scheduler.cpp  scheduler.h
src/siem/: event_serialize.cpp  event_serialize.h  jsonl_writer.cpp  jsonl_writer.h  siem_shipper.cpp  siem_shipper.h
src/signatures/: aho_corasick.cpp  aho_corasick.h  bloom.cpp  bloom.h  crc_matcher.cpp  crc_matcher.h  fuzzy_hash.cpp  fuzzy_hash.h  graph_sig.cpp  graph_sig.h  hash_matcher.cpp  hash_matcher.h  yara_scanner.cpp  yara_scanner.h
src/unpacker/: generic.cpp  generic.h  upx.cpp  upx.h
src/update/: update_client.cpp  update_client.h
testdata/: clean.txt  test_rules.yar
tests/fuzz/: fuzz_elf.cpp  fuzz_gzip.cpp  fuzz_ole2.cpp  fuzz_pdf.cpp  fuzz_pe.cpp  fuzz_scan_buffer.cpp  fuzz_x86_decode.cpp  fuzz_x86_emu.cpp  fuzz_zip.cpp
tests/fuzz/corpus_gzip/: multi.tar  single.tar
tests/hardening/: crafted_crash_pe.py  crafted_heuristic_pes.py  test_emu_evasion.cpp  test_heuristic_evasion.cpp  test_parser_resilience.cpp  test_self_protection.ps1  test_sig_evasion.ps1  test_update_attacks.py
tests/integration/: integration_sigs.json  test_end_to_end.py  test_full_system.ps1
tests/plugins/: test_plugin_bad_version.cpp  test_plugin_scanner.cpp
tests/unit/: test_aho_corasick.cpp  test_amsi.cpp  test_bloom.cpp  test_crc_matcher.cpp  test_dynamic_scorer.cpp  test_edr_rules.cpp  test_edr_shim.cpp  test_eicar.cpp  test_elf.cpp  test_engine_lifecycle.cpp  test_entropy_analyzer.cpp  test_file_type.cpp  test_fuzzy_hash.cpp  test_generic_unpacker.cpp  test_graph_sig.cpp  test_gzip_tar.cpp  test_hash_matcher.cpp  test_heuristic_pipeline.cpp  test_import_analyzer.cpp  test_ml_classifier.cpp  test_ole2.cpp  test_ooxml.cpp  test_pdf.cpp  test_pe.cpp  test_pe_loader.cpp  test_plugin_loader.cpp  test_quarantine.cpp  test_safe_reader.cpp  test_scan_cache.cpp  test_scan_pipeline.cpp  test_scheduler.cpp  test_self_protect.cpp  test_service.cpp  test_siem.cpp  test_sigdb.cpp  test_static_analyzer.cpp  test_string_analyzer.cpp  test_update_client.cpp  test_upx.cpp  test_watchdog.cpp  (+5 more)
tools/: dacl_test.cpp  sig_helper.cpp  update_test.cpp
tools/akavdb-tool/: akavdb_tool.py  test_sigs.json
tools/akavdb-tool/importers/: clamav.py  test_import.py
tools/ml/: train_classifier.py
